large refactor, dont use hard links and load workshop mods from download directory, add server mods

--- a/example/compose.yml
+++ b/example/compose.yml
@@ -6,14 +6,21 @@ services:
     container_name: arma3-server
     network_mode: host
     volumes:
+      # I've created a folder called shared that I use to contain all of my data
+      # Cache the steamcmd. Not required but if you do you will need to download this before
       - '/shared/arma3/cache:/steamcmd'
-      - '/shared/arma3/mpmissions:/arma3/mpmissions'
-      - '/shared/arma3/configs:/arma3/configs'
-      - '/shared/arma3/mods:/arma3/mods'
-      # Keep cached workshop content
-      - '/shared/arma3/workshop:/arma3/steamapps/workshop/content/107410'
-      # Exported mods list
-      - '/shared/arma3/mods.html:/arma3/mods.html'
+
+      # Cache entire arma 3 install (contains steam install, arma3 server, and mods)
+      - '/shared/arma3:/arma3'
+
+      # Expose missions / configs / local mods so we can add to them
+      # - '/shared/arma3/mpmissions:/arma3/mpmissions'
+      # - '/shared/arma3/configs:/arma3/configs'
+      # - '/shared/arma3/mods:/arma3/mods'
+      # Keep downloaded workshop content
+      # - '/shared/arma3/workshop:/arma3/steamapps/workshop/content/107410'
+      # Add exported mods list to base arma3 directory
+      # - '/shared/arma3/mods.html:/arma3/mods.html'
     environment:
       - WORKSHOP_MODS=mods.html
       - ARMA_CDLC=gm;ws
